--- a/portfolioBackend/src/main/resources/application.properties
+++ b/portfolioBackend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://alina:password@localhost:3306/portfoliodb?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC&sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
-spring.datasource.usarname=alina
-spring.datasource.password=password
+spring.datasource.url=jdbc:mysql://ug6nfc9l29leo9qr:iLEkBk6u5RgKGPHBY6Mm@b6pnmygchczwlh5ywfzc-mysql.services.clever-cloud.com:3306/b6pnmygchczwlh5ywfzc
+spring.datasource.usarname=ug6nfc9l29leo9qr
+spring.datasource.password=iLEkBk6u5RgKGPHBY6Mm
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 logging.level.org.springframework.security=DEBUG
 
